<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SiteDetailFragment">

    <EditText
        android:id="@+id/site_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/site_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/site_arrondissement_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/arrondissement"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/url_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/url"
        android:visibility="invisible"
        android:inputType="textUri"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/site_notes_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/show_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_map" />

    <Button
        android:id="@+id/edit_site_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_site" />

    <Button
        android:id="@+id/delete_site_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_site" />

    <Button
        android:id="@+id/new_site_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_site" />

</LinearLayout>